--- a/_src/assets/css/meta.css
+++ b/_src/assets/css/meta.css
@@ -9,5 +9,5 @@
 }
 
 .title + .meta {
-  margin-top: var(--space-xsmall);
+  margin-top: var(--space-xxxxsmall);
 }
